--- a/config.json
+++ b/config.json
@@ -3,3 +3,4 @@ Add feature for X [koZgte] line 1.3
 Refactor codebase with Z [WtIEWa] line 2.2
 Improve performance [1yR5gm] line 4.1
 Improve performance [JEGYRV] line 6.2
+Add feature for X [eldmAx] line 7.2
