--- a/config.json
+++ b/config.json
@@ -4,3 +4,4 @@ Refactor codebase with Z [WtIEWa] line 2.2
 Improve performance [1yR5gm] line 4.1
 Improve performance [JEGYRV] line 6.2
 Add feature for X [eldmAx] line 7.2
+Add feature for X [0rAmWA] line 8.2
