Add feature for X [sdYuDX]

--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Improve performance [1yR5gm] line 4.1
 Improve performance [JEGYRV] line 6.2
 Add feature for X [eldmAx] line 7.2
 Add feature for X [0rAmWA] line 8.2
+Add feature for X [sdYuDX] line 9.2
