--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 Add feature for X [koZgte] line 1.1
 Add feature for X [koZgte] line 1.3
 Refactor codebase with Z [WtIEWa] line 2.2
+Improve performance [1yR5gm] line 4.1
